      deprecation list by mistake in the original 2.5.28 release.
  * collection/unpacked:
    + [NT] Apply patch from Tomasz Buchert to extract the full time
      in UTC.

  * commands/reporting-sync-state.pm:
    + [NT] Read mirror files as UTF-8 files to avoid mojibake in
      maintainer names.  Once again, thanks to Andreas Rönnquist
      for the report.

  * data/cruft/non-free-license:
    + [BR] Detect autogenerated gperf data.  (Closes: #762179).
  * data/cruft/missing-dir-search-path:
    + [BR] Fix a false positive in fspy for source-is-missing.
  * data/cruft/warn-file-type:
    + [BR] Fix a false positive source-is-missing by checking
      -nc.js suffix.
    + [BR] Fix a false positive source-is-missing in zivot
      package by adding .e as binary suffix.
    + [BR] Fix a false positive source-is-missing by adding
      yorick source file as source.
    + [BR] Fix a false positive source-is-missing in
      haskell-pretty-show by adding -src.js suffix.
    + [BR] Fix a false positive source-is-missing in
      iceweasel by adding -prod.js suffix.
  * data/debhelper/*:
    + [NT] Refresh against unstable to pick up the rename of
      libaqbanking-dev.  Thanks to Micha Lenk for the reminder.
      (Closes: #787937)
  * data/fields/archive-sections:
    + [NT] Pre-emptively support the "debugsym" section, which is
      expected to be used by debhelper for "ddebs".
  * data/files/privacy-breaker-websites:
    + [BR] Detect mascot as logos.
  * data/java/constants:
    + [NT] Accept Java7 class files without warning as OpenJDK-7
      is now the default implementation.  Thanks to Markus
      Koschany for the report.  (Closes: #786895)

  * debian/changelog:
    + [NT] Add missing list of new / removed tags to the
      entry for the previous release.
    + [NT] Add missing "debfiles" in the list of collections
      deprecated in 2.5.28.  It was deprecated in that release
      despite the omission.

  * lib/Lintian/Collect/Package.pm: