@@ -45,6 +45,10 @@ gl2ps     ||\(C\) 1999-2009 C\. Geuzaine
 glee      ||Extension name exceeds 1023 characters\.
 glew      ||Missing GL version
 gmp       ||GNU MP: Cannot allocate memory
+
+# not really an embedded lib but avoid duplication
+ieee-data ||(?i)(?:standards(?:-oui\.ieee\.org|\.ieee\.org/develop/regauth/oui)/oui\.txt|DR\. B\. STRUCK)
+
 lcms      ||cmsCreateTransform: intent mismatch
 lcms2     ||Unsupported number of channels for VCGT
 libavcodec  ||source=libav||insufficient thread locking around avcodec_open/close\(\)\n
