@@ -1,5 +1,7 @@
 BINARIES :=  zlib libpng libjpeg libopenjpeg libtiff libpcre3 libbz2 libxml2 \
-		libmagic libexpat libsqlite libm gmp mpfr
+		libmagic libexpat libsqlite libm gmp mpfr \
+		ieee-data1 ieee-data2 ieee-data3
+
 MANPAGES := $(patsubst %,%.1,$(BINARIES))
 
 all: $(BINARIES) $(MANPAGES)
