@@ -1,0 +1,10 @@
+#include <stdio.h>
+
+static const char ieee_data_url[]
+    = "http://standards-oui.ieee.org/oui.txt";
+
+int
+main(void)
+{
+    printf("%s\n", ieee_data_url);
+}
