@@ -61,6 +61,8 @@ lintian (2.5.32) UNRELEASED; urgency=medium
       maintainer names.  Once again, thanks to Andreas Rönnquist
       for the report.
 
+  * data/binaries/embedded-libs:
+    + [BR] Detect embedded ieee-data package.
   * data/cruft/non-free-license:
     + [BR] Detect autogenerated gperf data.  (Closes: #762179).
   * data/cruft/missing-dir-search-path:
